2008-02-17  Marco Barisione  <marco@barisione.org>

	* glib/gregex.c: (match_info_new), (g_match_info_next): Don't return
	duplicate matches when matching empty strings.  (#515944)
	* tests/regex-test.c: Add tests.

2008-02-17  Hans Breuer  <hans@breuer.org>

	* glib/gutils.c : define CSIDL_MYPICTURES if not available
	* gthread/gthread-win32.c : use G_STRFUNC instead of compiler 
	specific __FUNCTION__

2008-02-13  Ryan Lortie  <desrt@desrt.ca>

	* docs/reference/gio/gio-sections.txt: add
	G_FILE_ATTRIBUTE_TRASH_ITEM_COUNT

2008-02-13  Tor Lillqvist  <tml@novell.com>

	* glib/gwin32.c: Doc change: Deprecate passing anything but NULL
	for the "package" parameter to
	g_win32_get_package_installation_directory() and
	g_win32_get_package_installation_subdirectory().

2008-02-11  Matthias Clasen <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.15.5 ===

	* NEWS: Updates

2008-02-11  Matthias Clasen <mclasen@redhat.com>

	* glib/gtestutils.h: Make the g_test_add macro work with 
	gcc 4.3

	* tests/gobject/paramspec-test.c: Adapt to recent changes in 
	GParamGType initialization.

2008-02-10  Matthias Clasen <mclasen@redhat.com>

	* glib/gtestutils.c: Fix a typo in the docs.

2008-02-09  Matthias Clasen <mclasen@redhat.com>

	* configure.in: Check for getmntent_r.

2008-02-09  Matthias Clasen <mclasen@redhat.com>

	* Makefile.decl: /bin/ksh can't handle a for-loop with no 
	arguments, so add a "." for when $(SUBDIRS) is empty.

	* glib/tests/option-context.c:
	* glib/tests/testing.c:
	* gthread/gthread-posix.c:
	* tets/testingbase64.c:
	* glib/gtester.c: 
	* glib/gsequence.c: Portability fixes.  (#515154)

2008-02-07  Tor Lillqvist  <tml@novell.com>

	* configure.in: Unfortunately the mingw implementations of
	C99-style snprintf and vsnprintf don't seem to be quite good
	enough, at least not in mingw-runtime-3.14. I don't know exactly
	what the problem is, but it is related to floating point